--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prismer",
+  "name": "mysql-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.2.1",
+    "@next/font": "13.1.6",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
+    "eslint-config-next": "13.1.6",
+    "mysql": "^2.18.1",
+    "next": "13.1.6",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
