--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ REACT_APP_HOST= 'svc.sel3.cloudtype.app'
 
 
 NEXT_PUBLIC_USER= 'root'
-NEXT_PUBLIC_PASSWORD= 'rladlrla'
-NEXT_PUBLIC_PORT= '31496'
-NEXT_PUBLIC_DATABASE= 'prismer'
+NEXT_PUBLIC_PASSWORD= 'gyzhkdldjt7319'
+NEXT_PUBLIC_PORT= '30640'
+NEXT_PUBLIC_DATABASE= 'test'
